still fixing styles, so that when i deploy it it shouldnt have those huge margins and overflows. just making sure its right

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,14 +14,10 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     height: 100vh;
-    font-family: 'Space+Mono', sans-serif;
-    font-size: 25px;
     margin: 0;
     color: white !important;
     text-align: center;
 }
-
-/* ----- main element ---*/
 
 
 /*------ Apod button ----- */
@@ -37,8 +33,8 @@ button.myBtn {
     position: relative;
     transition: .5s ease;
     top: 20%;
-    margin: 1em;
-    text-align: center;
+    margin: 3em;
+
 }
 
 @media (max-width: 450px) {
@@ -109,22 +105,23 @@ button:active {
 /* ----------- library Search ------------ */
 
 input {
-    height: 50px;
+    height: 40px;
     font-size: 20px;
     position: relative;
     left: 10px;
 }
 
 .search {
-    max-width: 300px;
-    margin: auto;
-    margin-bottom: 25px;
+    max-width: 200px;
+    margin: 0 auto;
     position: relative;
     text-align: center;
 }
 
 .search input {
-    text-indent: 30px;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    text-indent: 20px;
     font-family: 'Space+Mono', sans-serif;
     font-size: 0.8em;
     color: black;
@@ -142,9 +139,9 @@ input {
 
 .search .fa-search {
     position: absolute;
-    top: 6px;
-    left: 85%;
-    font-size: 1.5em;
+    right: -5px;
+    top: 5px;
+    font-size: 1.25em;
 }
 
 .search #searchInput {
@@ -174,7 +171,7 @@ input {
 .search input#searchInput:focus,
 .search input#searchInput:active {
     outline: none;
-    background: white;
+    background: transparent;
 }
 
 .search a:hover {
@@ -183,31 +180,15 @@ input {
 
 /* ----- image library ---- */
 
-.nasaImg#nasaImg {
-    left: 0;
-    right: 0;
-    display: block;
-    margin: 70px auto 0 auto;
-}
 
-.nasaImages img {
-    margin: auto;
-    display: block;
-}
+@media screen and (max-width: 600px) {
 
-
-.item {
-    margin-top: 8px;
-    max-width: 100%;
-    height: auto;
-    display: inline-flex;
-    margin: auto;
-    float: left;
-    justify-content: space-around;
-        padding: 0 6px;
-        float: left;
-        width: 24.99999%;
     }
+}
+@media screen and (max-width: 800px) {
+
+    }
+}
 
 
 .description {
@@ -219,23 +200,27 @@ input {
     display: none;
 }
 
-.description:hover,
-.item:hover {
-    display: block;
-    cursor: pointer;
+.container {
+    display: grid;
+    gap: 40px;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-auto-rows: 300px;
 }
-
+.container > div > .nasaImg {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
 
 .item {
-    max-width: 100%;
-    height: auto;
+    vertical-align: none;
+}
+
+.item {
+    /*max-width: 100%;
+    height: auto;*/
     border: 2px solid #fa923f;
 }
-
-.item:hover {
-    border: 1px solid white;
-}
-
 
 /* ----- back button --- */
 
@@ -246,7 +231,6 @@ input {
 }
 
 .fa-angle-double-left {
-
     padding-left: 10px;
     margin: 1rem;
     width: 3em;
@@ -262,27 +246,54 @@ i.fa-angle-double-left:focus {
     color: #fa923f;
 }
 
+/*-- Top Button --*/
+.topBtn {
+    position: fixed;
+    width: 35px;
+    height: 35px;
+    background: transparent;
+    bottom: 50px;
+    right: 50px;
+    z-index: 99;
+    border: none;
+    outline: none;
+    color: white;
+    cursor: pointer;
+    opacity: 1;
+    transform: translateY(100px);
+    transition: all 0.5s ease;
+}
+
+.showBtn {
+    opacity: 1;
+    transform: translateY(0px);
+}
+
+i.fa-arrow-up:hover,
+i.fa-arrow-up:focus {
+    border-color: #fa923f;
+    color: #fa923f;
+}
+
 
 /* -- text --- */
 
 
-.container #quote {
+.quote {
     color: #fafafa;
     position: relative;
     font-weight: 300;
-    width: 70%;
-    margin-top: 3em;
-    font-size: 20px;
-    text-align: center;
+    width: 0%;
+    top: 30%;
+    margin: auto;
+    font-size: 1em;
     letter-spacing: 6px;
 }
 
-span.unknown {
-    right: 0;
+span .unknown {
+    text-align: right;
     margin-right: 0;
 }
-
-
 /* ---- media queries */
 
 @media (max-width: 1200px) {
@@ -313,6 +324,12 @@ span.unknown {
         -webkit-column-count: 1;
         column-count: 1;
     }
+    input {
+        max-width: 200px
+    }
+    body {
+        font-size: 1.5rem;
+    }
 }
 
 /* stars background */
@@ -331,7 +348,7 @@ span.unknown {
     overflow: hidden;
     position: absolute;
     top: 0;
-    z-index: 0;
+    z-index: -25;
     width: 100%;
     height: 100%;
     -webkit-perspective: 340px;
